[gd_scene load_steps=16 format=3 uid="uid://b6vyxdgeh2jk3"]

[ext_resource type="Script" path="res://Scripts/IA/Animal.gd" id="1_03v4t"]
[ext_resource type="Resource" uid="uid://v4r24bbgjqt6" path="res://Scripts/Ressources/Animals/Rabbit.tres" id="2_5w1b4"]
[ext_resource type="PackedScene" uid="uid://dxrf8eooi76ss" path="res://Scenes/AI/animals_ai.tscn" id="2_8ivd4"]
[ext_resource type="Texture2D" uid="uid://braqrvhbgboob" path="res://Sprites/Temp/Enemy-sheet.png" id="2_o8qke"]
[ext_resource type="Script" path="res://Nodes/HealthSystem.gd" id="3_51m53"]
[ext_resource type="PackedScene" uid="uid://vuhu32km1h80" path="res://Particles/HitParticle.tscn" id="4_wfltu"]
[ext_resource type="Script" path="res://Nodes/Oscillator.gd" id="5_1x84w"]
[ext_resource type="Script" path="res://Scripts/Animations/SpriteAnimator.gd" id="6_db6v5"]
[ext_resource type="Script" path="res://Nodes/HungerSystem.gd" id="8_0amy2"]
[ext_resource type="Texture2D" uid="uid://yqppk72ncs4l" path="res://Sprites/Objects/Shadow.png" id="10_51a2n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o2dk2"]
atlas = ExtResource("2_o8qke")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww1k1"]
atlas = ExtResource("2_o8qke")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_w1703"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2dk2")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2dk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww1k1")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b1pus"]
radius = 21.0
height = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h7yun"]
radius = 10000.0

[node name="Mannequin" type="CharacterBody2D" node_paths=PackedStringArray("_hungerSystem", "_healthSystem", "_nav")]
collision_layer = 4
script = ExtResource("1_03v4t")
_Stats = ExtResource("2_5w1b4")
_hungerSystem = NodePath("HungerSystem")
_healthSystem = NodePath("HealhSystem")
_nav = NodePath("NavigationAgent2D")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.219608)
position = Vector2(0, 19)
scale = Vector2(0.237, 0.081)
texture = ExtResource("10_51a2n")

[node name="AnimalsAI" parent="." node_paths=PackedStringArray("blackboard", "actor") instance=ExtResource("2_8ivd4")]
blackboard = NodePath("@Node@226253")
actor = NodePath("..")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_w1703")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_b1pus")

[node name="SpriteAnimator" type="Node2D" parent="." node_paths=PackedStringArray("_ownerCharacter", "_animatedSprite")]
script = ExtResource("6_db6v5")
_ownerCharacter = NodePath("..")
_animatedSprite = [NodePath("../AnimatedSprite2D")]
_canFlip = true

[node name="HealhSystem" type="Node" parent="."]
script = ExtResource("3_51m53")
_hp = 150.0
_maxHp = 150.0
_hitParticle = ExtResource("4_wfltu")

[node name="HungerSystem" type="Node" parent="." node_paths=PackedStringArray("_hungerField")]
script = ExtResource("8_0amy2")
_hunger = 25.0
_hungerField = NodePath("../HungerField")

[node name="Oscillator" type="Node" parent="." node_paths=PackedStringArray("_target")]
script = ExtResource("5_1x84w")
_target = NodePath("../AnimatedSprite2D")
_mode = 1

[node name="HungerField" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HungerField"]
shape = SubResource("CircleShape2D_h7yun")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[connection signal="ApplyDamageEvent" from="HealhSystem" to="HealhSystem" method="_on_apply_damage_event"]
[connection signal="Death" from="HealhSystem" to="." method="_on_healh_system_death"]
[connection signal="SetVelocity" from="Oscillator" to="Oscillator" method="_on_set_velocity"]
[connection signal="body_entered" from="HungerField" to="HungerSystem" method="_on_hunger_field_body_entered"]
